<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_events">

    <fragment
        android:id="@+id/nav_events"
        android:name="com.abidjalionel.massguest.ui.events.EventsFragment"
        android:label="@string/Events"
        tools:layout="@layout/fragment_event" />

    <fragment
        android:id="@+id/nav_videos"
        android:name="com.abidjalionel.massguest.ui.video.VideoFragment"
        android:label="@string/Videos"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/nav_findus"
        android:name="com.abidjalionel.massguest.ui.findus.FindusFragment"
        android:label="@string/Notifications"
        tools:layout="@layout/fragment_findus" />
</navigation>